[package]
name = "core"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "apple"

[[bin]]
name = "apple"

[[bin]]
name = "banana"

[[bin]]
name = "orange"

[[bin]]
name = "test_unknown"

[dependencies]
config-schema = { path = "../config-schema" }
fruits = { path = "../fruits" }
config = "0.15"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
