[package]
name = "multitask"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "greenthread"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true

[dependencies]
nix = { version = "0.29.0", features = ["mman"] }
rand = "0.8.5"

[[bin]]
name = "greenthread"

[[bin]]
name = "actors"
