[package]
name = "state_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
nix = { version = "0.27.1", features = ["event"] }

[[bin]]
name = "state_machine"

[[bin]]
name = "scheduler"

[[bin]]
name = "epoll_server"

