[package]
name = "kubernetes-examples"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.85.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.19.0", features = ["v1_27"] }
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[[example]]
name = "pod_list"
path = "pod_list.rs"

