[package]
name = "bidirectional"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustpython = { git = "https://github.com/RustPython/RustPython.git", version = "0.2.0" }
rustpython-vm = { git = "https://github.com/RustPython/RustPython.git", version = "0.2.0" }
