[package]
name = "backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.5", features = ["macros"] }
http-body-util = "0.1.2"
listenfd = "1.0.1"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
