[package]
name = "hyper-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.8", features = ["full"] }
pretty_env_logger = "0.5.0"
tokio = { version = "1.40.0", features = ["full"] }
