[package]
name = "tower-middleware"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.8", features = ["full"] }
pin-project = "1.1.5"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
