[package]
name = "id_allocation"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "overflowed"

[[bin]]
name = "panic"

[[bin]]
name = "subtract"

[[bin]]
name = "compare_exchange"

[[bin]]
name = "compare_exchange_no_overflow"

[[bin]]
name = "fetch_update"

[[bin]]
name = "compare_exchange_lazy_init"

[dependencies]

