[package]
name = "routeguide"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
async-stream = "0.3.6"
prost = "0.13.5"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
